infrastructure/terraform/security.tf
variable "admin_cidr" {
  description = "Public IPv4 address allowed to administer the EC2 instance"
  type        = string
}

resource "aws_security_group" "application" {
  name        = "aws-cicd-application-sg"
  description = "Security group for the CI/CD application EC2 instance"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH administration"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.admin_cidr]
  }

  ingress {
    description = "HTTP application traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS application traffic"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow outbound IPv4 traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "aws-cicd-application-sg"
  }
}
